Initial core data hibernate

--- a/web/src/main/webapp/index.xhtml
+++ b/web/src/main/webapp/index.xhtml
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html lang="en"
-      xmlns="http://www.w3.org/1999/xhtml"
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="jakarta.faces.html"
       xmlns:f="jakarta.faces.core"
-      xmlns:h="jakarta.faces.html">
-<f:view>
-    <h:head></h:head>
-    <h:body>
-        hallo welt
-    </h:body>
-</f:view>
+      xmlns:p="primefaces">
+
+<h:head>
+    Test
+</h:head>
+
+<h:body>
+    <p:spinner />
+</h:body>
 </html>
