--- a/web/src/main/webapp/login.xhtml
+++ b/web/src/main/webapp/login.xhtml
@@ -4,7 +4,7 @@
       xmlns:p="http://primefaces.org/ui">
 <h:head>
     <title>Login</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <h:outputStylesheet library="css" name="login.css"/>
 </h:head>
 <h:body>
     <div class="container">
