--- a/web/src/main/webapp/resetPassword.xhtml
+++ b/web/src/main/webapp/resetPassword.xhtml
@@ -5,29 +5,50 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <title>Passwort zurücksetzen</title>
-    <!-- Du kannst register.css wiederverwenden, sieht konsistent aus -->
     <h:outputStylesheet library="css" name="register.css"/>
 </h:head>
 <h:body class="register-page">
     <div class="register-container">
         <h:form id="resetForm">
+
+            <!-- Popup-Meldungen (Erfolg/Fehler global) -->
+            <p:growl id="growl"
+                     showDetail="true"
+                     skipDetailIfEqualsSummary="true"
+                     life="5000"
+                     closable="true"
+                     autoUpdate="true"
+                     globalOnly="true"
+                     position="top-right"/>
+
             <p:panel header="Passwort zurücksetzen" styleClass="register-panel">
-                <p:messages id="msgs" autoUpdate="true" closable="true"/>
+
+                <!-- Inline-Meldungen (Validierung pro Feld) -->
+                <p:messages id="msgs"
+                            showDetail="true"
+                            closable="true"
+                            autoUpdate="true"
+                            for="@all"/>
 
                 <p:panelGrid columns="1" columnClasses="fullwidth" layout="grid" styleClass="form-grid">
+
                     <!-- E-Mail -->
                     <p:inputText id="resetEmail"
                                  value="#{passwordResetBean.resetEmail}"
                                  required="true"
+                                 requiredMessage="Bitte E-Mail angeben."
                                  label="E-Mail"
-                                 placeholder="E-Mail">
+                                 placeholder="E-Mail"
+                                 autofocus="true">
                         <f:validateRegex pattern="^[^\\s@]+@[^\\s@]+\\.[^\\s@]+$"/>
+                        <f:attribute name="data-pf-tooltip" value="true"/>
                     </p:inputText>
 
                     <!-- Neues Passwort -->
                     <p:password id="newPassword"
                                 value="#{passwordResetBean.newPassword}"
                                 required="true"
+                                requiredMessage="Bitte neues Passwort angeben."
                                 label="Neues Passwort"
                                 toggleMask="true"
                                 feedback="false"
@@ -37,25 +58,28 @@
                     <p:password id="confirmPassword"
                                 value="#{passwordResetBean.confirmPassword}"
                                 required="true"
+                                requiredMessage="Bitte Passwort bestätigen."
                                 label="Passwort bestätigen"
                                 toggleMask="true"
                                 feedback="false"
                                 placeholder="Passwort bestätigen">
+                        <!-- Dein eigener Validator, der confirm == new prüft -->
                         <f:validator validatorId="confirmPasswordValidator"/>
                         <f:attribute name="otherValue" value="#{passwordResetBean.newPassword}"/>
                     </p:password>
+
                 </p:panelGrid>
 
                 <div class="button-row">
                     <p:commandButton value="Passwort setzen"
                                      action="#{passwordResetBean.resetPasswordByEmail}"
-                                     update="@form"
+                                     update="@form growl msgs"
                                      styleClass="btn btn-register"/>
-
                     <p:button value="Zurück zum Login"
                               outcome="login.xhtml"
                               styleClass="btn btn-back-login"/>
                 </div>
+
             </p:panel>
         </h:form>
     </div>
