--- a/web/src/main/webapp/technology.xhtml
+++ b/web/src/main/webapp/technology.xhtml
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="jakarta.faces.html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+>
+
 <h:head>
     <title>Technologien verwalten</title>
     <h:outputStylesheet library="css" name="style.css"/>
@@ -16,6 +18,14 @@
             <p:panelGrid columns="2">
                 <h:outputLabel for="name" value="Name:"/>
                 <p:inputText id="name" value="#{technologyBean.name}"/>
+
+                <h:outputLabel value="Qualifikation"/>
+
+                <p:rating id="qualRating"
+                          value="#{technologyBean.level}"
+                          stars="#{technologyBean.maxLevel}"
+                          cancel="false"
+                          converter="#{levelConverter}"/>
             </p:panelGrid>
         </p:panel>
 
@@ -24,7 +34,8 @@
             <p:commandButton icon="pi pi-save"
                              styleClass="btn-round btn-save"
                              action="#{technologyBean.save}"
-                             update=":mainForm:technologyTable"/>
+                             update="@form :mainForm:technologyTable"
+                             resetValues="true"/>
 
             <p:commandButton id="csvImportButton"
                              icon="pi pi-upload"
@@ -36,6 +47,14 @@
             <p:dataTable id="technologyTable" value="#{technologyBean.technologies}" var="tech" style="width:100%">
                 <p:column headerText="Name">
                     #{tech.name}
+                </p:column>
+                <p:column headerText="Level">
+                    <p:rating id="qualRating"
+                              value="#{tech.level}"
+                              stars="#{technologyBean.maxLevel}"
+                              cancel="false"
+                              readonly="true"
+                              converter="#{levelConverter}"/>
                 </p:column>
                 <p:column>
                     <!-- Löschen -->
